--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,5 +25,5 @@ phases:
       - npm run cy:info
   build:
     commands:
-      - npm run start:ci &
+      - npm run start:ci & wait-on http://localhost:8080
       - npx cypress run
