--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,8 @@ phases:
     commands:
       - npm run cy:verify
       - npm run cy:info
+      - npm run cy:cache:list
   build:
     commands:
-      - npm run start & wait-on http://localhost:8080
+      - npm run start &
       - npx cypress run
