--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ phases:
       - export COMMIT_INFO_REMOTE="$(git config --get remote.origin.url)"
       - npm ci
       - echo "install cypress dependencies..."
+      - npm install -g wait-on
       - apt-get update
       - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
@@ -26,5 +27,5 @@ phases:
       - npm run cy:cache:list
   build:
     commands:
-      - npm run start &
+      - npm run start & wait-on http://localhost:8080
       - npx cypress run
