--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,7 @@ phases:
       - npm run start & wait-on http://localhost:8080
       - npx cypress run -spec "cypress/e2e/1-getting-started/*.cy.js"
 
-# reports:
-#   TestFolder:
-#     files:
-#       - cypress/reports/finalReports/junit.xml
+reports:
+  TestFolder:
+    files:
+      - cypress/reports/finalReports/junit.xml
