--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,8 +29,9 @@ phases:
     commands:
       - npm run start & wait-on http://localhost:8080
       - npx cypress run -spec "cypress/e2e/1-getting-started/*.cy.js"
-
-reports:
-  TestFolder:
-    files:
-      - cypress/reports/finalReports/junit.xml
+# TODO - add post-build commands and then implement reports
+# see mdc-screener-web-v2 package-scripts.js
+# reports:
+#   TestFolder:
+#     files:
+#       - cypress/reports/finalReports/junit.xml
