--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,10 +16,10 @@ phases:
       - export COMMIT_INFO_SHA="$(git log -1 --pretty=%H)"
       - export COMMIT_INFO_REMOTE="$(git config --get remote.origin.url)"
       - npm ci
-      - echo "install cypress dependencies..."
-      - npm install -g wait-on
-      - apt-get update
-      - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+      # - echo "install cypress dependencies..."
+      # - npm install -g wait-on
+      # - apt-get update
+      # - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
     commands:
       - npm run cy:verify
