remove runtime install for docker

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: latest
+    # runtime-versions:
+    #   nodejs: latest
     commands:
       # Set COMMIT_INFO variables to send Git specifics to Cypress Cloud when recording
       # https://docs.cypress.io/guides/continuous-integration/introduction#Git-information
