--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,6 @@ batch:
           WORKERS:
             - 1
             - 2
-
 phases:
   install:
     # runtime-versions:
@@ -51,9 +50,9 @@ phases:
   build:
     commands:
       - npm run start & wait-on http://localhost:8080
-      - npx cypress run --parallel --record --key abc123 --browser chrome:stable --ci-build-id
-        $CODEBUILD_INITIATOR --group "$CY_GROUP" --spec "$CY_SPEC" --config
-        "$CY_CONFIG"
+      - npx cypress run --parallel --record --browser chrome:stable --ci-build-id
+        $CODEBUILD_INITIATOR-$CODEBUILD_START_TIME #--group "$CY_GROUP" --spec "$CY_SPEC" --config "$CY_CONFIG"
+
 
       # - npx cypress run --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
