--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,7 @@ batch:
         # ...
         variables:
           CY_GROUP_SPEC:
-            - 'cypress/e2e/1-getting-started/*.cy.js'
-            - 'cypress/e2e/2-advanced-examples/*.cy.js'
+            - 'E2E - Chrome|chrome:stable|cypress/e2e/*'
           WORKERS:
             - 1
             - 2
@@ -50,8 +49,8 @@ phases:
   build:
     commands:
       - npm run start & wait-on http://localhost:8080
-      - npx cypress run --parallel --record --browser chrome:stable --ci-build-id
-        $CODEBUILD_INITIATOR-$CODEBUILD_START_TIME #--group "$CY_GROUP" --spec "$CY_SPEC" --config "$CY_CONFIG"
+      - npx cypress run --parallel --record --ci-build-id
+        $CODEBUILD_INITIATOR-$CODEBUILD_START_TIME --group "$CY_GROUP" "$CY_BROWSER"--browser --spec "$CY_SPEC" #--config "$CY_CONFIG"
 
       # - npx cypress run --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
