--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,8 @@ batch:
         # ...
         variables:
           CY_GROUP_SPEC:
-            - 'E2E - Chrome|chrome:stable|cypress/e2e/*/*.cy.js'
+            - 'E2E - Chrome-2|chrome:stable|cypress/e2e/2-advanced-examples/*.cy.js'
+            - 'E2E - Chrome-3|chrome:stable|cypress/e2e/3-advanced-examples/*.cy.js'
           WORKERS:
             - 1
             - 2
