--- a/buildspec.yml
+++ b/buildspec.yml
@@ -55,7 +55,7 @@ phases:
     commands:
       - npm run start & wait-on http://localhost:8080
       - npx cypress run --parallel --record --ci-build-id
-        $CODEBUILD_INITIATOR-$CODEBUILD_START_TIME --group "$CY_GROUP" "$CY_BROWSER"--browser --spec "$CY_SPEC" #--config "$CY_CONFIG"
+        $CODEBUILD_INITIATOR-$CODEBUILD_START_TIME --browser "$CY_BROWSER" #--group $CY_GROUP  --spec "$CY_SPEC" #--config "$CY_CONFIG"
 
       # - npx cypress run --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
