--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,14 +8,14 @@ batch:
         variables:
           BUILD_ID: build1
           SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
-          IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
+          # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
       ignore-failure: false
     - identifier: build2
       env:
         variables:
           BUILD_ID: build2
           SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
-          IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
+          # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
       ignore-failure: true
 
 phases:
