remove spec quotes

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -47,7 +47,7 @@ phases:
     commands:
       - npm run start & wait-on http://localhost:8080
       - echo $SPEC_DIR
-      - npx cypress run --browser chrome:stable --spec "$SPEC_DIR"
+      - npx cypress run --browser chrome:stable --spec $SPEC_DIR
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
 
