--- a/buildspec.yml
+++ b/buildspec.yml
@@ -74,6 +74,7 @@ phases:
       - npm ci
       - echo "install cypress dependencies..."
       - npm install -g wait-on
+      - npm install -g junit-report-merger
       # - apt-get update
       # - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
