--- a/buildspec.yml
+++ b/buildspec.yml
@@ -74,7 +74,7 @@ phases:
       - npm ci
       - echo "install cypress dependencies..."
       - npm install -g wait-on
-      - npm install -g junit-report-merger
+      # - npm install -g junit-report-merger
       # - apt-get update
       # - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
@@ -84,8 +84,8 @@ phases:
   build:
     commands:
       - npm run start & wait-on http://localhost:8080
-      # - npx cypress run --browser chrome:stable
-      - npx cypress run --browser chrome:stable --spec "cypress/e2e/2-advanced-examples/*.cy.js"
+      - npx cypress run --browser chrome:stable
+      # - npx cypress run --browser chrome:stable --spec "cypress/e2e/2-advanced-examples/*.cy.js"
 
 ##################################
 # cypress POC
