--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,66 +1,21 @@
 ## buildspec.yml
 version: 0.2
-# batch:
-#   fast-fail: false
-#   build-list:
-#     - identifier: build1
-#       env:
-#         variables:
-#           BUILD_ID: build1
-#           SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
-#           # SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js,cypress/e2e/2-advanced-examples/*.cy.js,cypress/e2e/3-advanced-examples/*.cy.js,cypress/e2e/4-advanced-examples/*.cy.js"
-#           # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
-#       ignore-failure: false
-#     - identifier: build2
-#       env:
-#         variables:
-#           BUILD_ID: build2
-#           SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
-#           # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
-#       ignore-failure: true
-#     - identifier: build3
-#       env:
-#         variables:
-#           BUILD_ID: build3
-#           SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
-#           # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
-#       ignore-failure: true
-#     - identifier: build4
-#       env:
-#         variables:
-#           BUILD_ID: build4
-#           SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
-#           # IMAGE: public.ecr.aws/cypress-io/cypress/browsers:node-16.18.1-chrome-109.0.5414.74-1-ff-109.0-edge-109.0.1518.52-1
-#       ignore-failure: true
-
-# batch:
-#   fast-fail: false
-#   build-matrix:
-#     static:
-#       ignore-failure: false
-#       # env:
-#       #   type: LINUX_CONTAINER
-#       #   privileged-mode: true
-#       #   compute-type: BUILD_GENERAL1_MEDIUM
-#     dynamic:
-#       env:
-#         # compute-type:
-#         #   - BUILD_GENERAL1_MEDIUM
-#         # image:
-#         #   - public.ecr.aws/cypress-io/cypress/browsers:node16.14.2-slim-chrome100-ff99-edge
-#         variables:
-#           SPEC_DIR:
-#             - "cypress/e2e/1-getting-started/*.cy.js"
-#             - "cypress/e2e/2-advanced-examples/*.cy.js"
-#             - "cypress/e2e/3-advanced-examples/*.cy.js"
-#             - "cypress/e2e/4-advanced-examples/*.cy.js"
-#           WORKERS:
-#             - 1
+batch:
+  fast-fail: false
+  build-matrix:
+    static:
+      ignore-failure: false
+    dynamic:
+      env:
+        variables:
+          SPEC_DIR:
+            - "cypress/e2e/1-getting-started/*.cy.js"
+            - "cypress/e2e/2-advanced-examples/*.cy.js"
+            - "cypress/e2e/3-advanced-examples/*.cy.js"
+            - "cypress/e2e/4-advanced-examples/*.cy.js"
 
 phases:
   install:
-    # runtime-versions:
-    #   nodejs: latest
     commands:
       # Set COMMIT_INFO variables to send Git specifics to Cypress Cloud when recording
       # https://docs.cypress.io/guides/continuous-integration/introduction#Git-information
@@ -71,10 +26,10 @@ phases:
       - export COMMIT_INFO_AUTHOR="$(git log -1 --pretty=%an)"
       - export COMMIT_INFO_SHA="$(git log -1 --pretty=%H)"
       - export COMMIT_INFO_REMOTE="$(git config --get remote.origin.url)"
+      # - echo $SPEC_DIR
       - npm ci
       - echo "install cypress dependencies..."
       - npm install -g wait-on
-      # - npm install -g junit-report-merger
       # - apt-get update
       # - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
@@ -84,66 +39,14 @@ phases:
   build:
     commands:
       - npm run start & wait-on http://localhost:8080
-      - npx cypress run --browser chrome:stable
-      # - npx cypress run --browser chrome:stable --spec "cypress/e2e/2-advanced-examples/*.cy.js"
+      - echo $SPEC_DIR
+      - npx cypress run --browser chrome:stable --spec $SPEC_DIR
+      # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
+      # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
 
-##################################
-# cypress POC
-#   post_build:
-#     commands:
-#       # - npm run post-test
-#       # - npm run
-#       # - npm run merge-json-reports & npm run merge-junit-reports
-#       - npm run merge-json-reports & npm run merge-junit-reports
-# #added to packag.json
-# #"merge-junit-reports": "jrm ./cypress/reports/finalReports/junit.xml \"./cypress/reports/source/junits/*.xml\"",
-# #    "merge-json-reports": "mochawesome-merge cypress/reports/source/Jsons/*.json > cypress/reports/finalReports/report.json",
-
-# artifacts:
-#   files:
-#     - cypress/reports/finalReports/*
-#   name: ${JOB_NAME}/${CODEBUILD_BUILD_NUMBER}
+# TODO - add post-build commands and then implement reports
+# see mdc-screener-web-v2 package-scripts.js
 # reports:
-#   reports:
-#     files: 
-#       - cypress/reports/finalReports/junit.xml
-#     file-format: JUNITXML
-
-##################################
-
-##################################
-# # mdc-screen-v2
-#   post_build:
-#     commands:
-#       # - npx nps ${env}Report
-#       # - npx nps devReport
-#       - 'jrm ./cypress/reports/finalReports/junit.xml "./cypress/reports/source/junit/*.xml"'
-#       - "mochawesome-merge cypress/reports/source/json/*.json > cypress/reports/finalReports/report.json"
-#       # - "node testing/retry.js && cat cypress/reports/finalReports/report.json"
-
-#       # devReport: {
-#       #       default: "nps afterTest.series uploadResultsToS3"
-#       #     }
-
-#       #     afterTest: {
-#       #       mergeJunitReports:
-#       #         'jrm ./cypress/reports/finalReports/junit.xml "./cypress/reports/source/junit/*.xml"',
-#       #       mergeJsonReports:
-#       #         "mochawesome-merge cypress/reports/source/json/*.json > cypress/reports/finalReports/report.json",
-#       #       addRetryInJsonReport:
-#       #         "node testing/retry.js && cat cypress/reports/finalReports/report.json",
-#       #       series:
-#       #         "nps afterTest.mergeJunitReports afterTest.mergeJsonReports afterTest.addRetryInJsonReport",
-#       #     },
-
-# reports:
-#   # arn:aws:codebuild:us-east-1:011016601825:report-group/cypress-td-codebuild-docker-no-batch-TestFolder
 #   TestFolder:
 #     files:
-#       - "junit.xml"
-#       - "cypress/reports/finalReports/junit.xml"
-#     file-format: JUNITXML
-#     base-directory: "."
-##################################
-
-
+#       - cypress/reports/finalReports/junit.xml
