--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,8 +28,8 @@ phases:
       - export COMMIT_INFO_REMOTE="$(git config --get remote.origin.url)"
       # - echo $SPEC_DIR
       - npm ci
-      - echo "install cypress dependencies..."
-      - npm install -g wait-on
+      # - echo "install cypress dependencies..."
+      # - npm install -g wait-on
       # - apt-get update
       # - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
   pre_build:
