--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,27 +20,23 @@ batch:
     - identifier: "1_getting_started"
       env:
         variables:
-          # BUILD_ID: build1
           SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
       ignore-failure: false
     - identifier: "2_advanced_examples"
       env:
         variables:
-          # BUILD_ID: build2
           SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
       ignore-failure: true
-    # - identifier: "3_advanced_examples"
-    #   env:
-    #     variables:
-    #       BUILD_ID: build3
-    #       SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
-    #   ignore-failure: true
-    # - identifier: "4_advanced_examples"
-    #   env:
-    #     variables:
-    #       BUILD_ID: build4
-    #       SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
-    #   ignore-failure: true
+    - identifier: "3_advanced_examples"
+      env:
+        variables:
+          SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
+      ignore-failure: true
+    - identifier: "4_advanced_examples"
+      env:
+        variables:
+          SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
+      ignore-failure: true
 
 phases:
   install:
