--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,26 +17,31 @@ version: 0.2
 batch:
   fast-fail: false
   build-list:
-    - identifier: "1_getting_started"
+    # - identifier: "1_getting_started"
+    #   env:
+    #     variables:
+    #       SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
+    #   ignore-failure: false
+    # - identifier: "2_advanced_examples"
+    #   env:
+    #     variables:
+    #       SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
+    #   ignore-failure: true
+    # - identifier: "3_advanced_examples"
+    #   env:
+    #     variables:
+    #       SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
+    #   ignore-failure: true
+    # - identifier: "4_advanced_examples"
+    #   env:
+    #     variables:
+    #       SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
+    #   ignore-failure: true
+    - identifier: "all_tests"
       env:
         variables:
-          SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
+          SPEC_DIR: "cypress/e2e/**/*.cy.js"
       ignore-failure: false
-    - identifier: "2_advanced_examples"
-      env:
-        variables:
-          SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
-      ignore-failure: true
-    - identifier: "3_advanced_examples"
-      env:
-        variables:
-          SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
-      ignore-failure: true
-    - identifier: "4_advanced_examples"
-      env:
-        variables:
-          SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
-      ignore-failure: true
 
 phases:
   install:
