--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,12 @@
 version: 0.2
 
 batch:
-  fast-fail: false
+  fast-fail: true
   build-list:
     - identifier: UITesting
+      env:
+        compute-type: BUILD_GENERAL1_MEDIUM
+        Image: aws/codebuild/standard:5.0
       ignore-failure: false
       debub-session: false
       buildspec: cypress/buildspec-batch.yml
